tests/negative/dict_for_in.far
fun main() -> i64 {
  d: Dict<i64, i64> = Dict<i64, i64>()
  d.set(1, 10)
  for k in d {
    return 0
  }
  return 0
}
